# scholarimpact

./: .gitignore  .mise.toml  README.md  justfile  pyproject.toml
.github/workflows/: release.yml  test.yml
