[build-system]
requires = ["setuptools>=65.0", "setuptools-scm>=8.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "scholarimpact"
dynamic = ["version"]
description = "A bibliometric tool to analyse, visualise, and share your research impact, output and scholarly influence using Google Scholar and OpenAlex data"
readme = "README.md"
license = {text = "MIT"}
authors = [
    {name = "Abhishek Tiwari", email = "scholarimpact@abhishek-tiwari.com"}
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Scientific/Engineering :: Information Analysis",
    "Topic :: Internet :: WWW/HTTP :: Dynamic Content",
]
keywords = ["citations", "google-scholar", "research", "dashboard", "analysis", "academic"]
requires-python = ">=3.9"

dependencies = [
    "streamlit>=1.28.0",
    "pandas>=2.0.0",
    "numpy>=1.24.0",
    "plotly>=5.14.0",
    "click>=8.0.0",
    "PyYAML>=6.0",
    "requests>=2.28.0",
    "beautifulsoup4>=4.11.0",
    "selenium>=4.10.0",
    "scholarly>=1.7.11",
    "pyalex>=0.18",
    "pycountry>=22.0.0",
    "geopy>=2.4.1",
    "tqdm>=4.65.0",
]

[dependency-groups]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "pytest-benchmark>=4.0.0",
    "mypy>=1.0.0",
    "ruff>=0.9.0",
    "build>=0.8.0",
    "twine>=4.0.0",
    "setuptools-scm>=6.2.0",
]

[project.urls]
Homepage = "https://github.com/abhishektiwari/scholarimpact"
Repository = "https://github.com/abhishektiwari/scholarimpact.git"
Issues = "https://github.com/abhishektiwari/scholarimpact/issues"

[project.scripts]
scholarimpact = "scholarimpact.cli.main:cli"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
scholarimpact = [
    "assets/**/*.toml",
    "assets/**/*.ttf",
    "assets/**/*.otf", 
    "assets/**/*.woff",
    "assets/**/*.woff2",
    "assets/**/*.txt",
    "assets/**/*.md"
]

[tool.ruff]
line-length = 88
target-version = "py312"

[tool.ruff.lint]
select = [
    "E",    # pycodestyle errors
    "W",    # pycodestyle warnings
    "F",    # pyflakes
    "I",    # isort
    "N",    # pep8-naming
    "UP",   # pyupgrade
    "B",    # flake8-bugbear
    "SIM",  # flake8-simplify
    "RUF",  # ruff-specific rules
]
ignore = [
    "E501",  # line too long — handled by formatter
]

[tool.ruff.lint.isort]
known-first-party = ["scholarimpact"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
docstring-code-format = true

[tool.setuptools_scm]
write_to = "src/scholarimpact/_version.py"
version_scheme = "no-guess-dev"
local_scheme = "no-local-version"